app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
*= require twitter/bootstrap

 *= require_self
 *= require_tree .
 */


/*this is applicable for all pages*/
body {
  padding-top: 90px;
  background-color: #F2F2F2;
}

#nav-logo {
  width: 30px;
  height: auto;
}



#nav-stuff {
  padding-top: 20px;
  background-color: red;
}

span {
  float:left;
  margin-top: -34px;
  margin-left: 95px;
}


/**********************************/

/* this style is for the main page only */
.full {
    background: url('/assets/logo.png') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: 70%;
    -o-background-size: cover;
}


/**********************************/

/*this style is for about page only*/

#learning-style {
  /* aqua blue */
  background-color: #3EC3C9;
}

#front-end-learning{
  background-color: #AC46D1;
}

#back-end-learning {
  background-color: #F2FD4E;
}

#about-me {
  background-color: #FFA04E;
}

#four-boxes .row div {
  height: 300px;
}

.row div img {
  display: block;
  margin: 0 auto;
}

.four-box:after {
    content:'\A';
    position:absolute;
    width:100%; height:100%;
    top:0; left:0;
    background:rgba(0,0,0,0.6);
    opacity:20;
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
}
.four-box:hover:after {
    transition: all 0.5s;
    -webkit-transition: all 0.5s;
    position: relative;
    z-index: -1;
    opacity:0;
}

#creator {
  /*color:#666666;*/
  color:white;
  margin-bottom: 13px;
}

#name {
  /*color:#666666;*/
  color:white;
  margin-bottom: 1px;
}
#title {
  color:white;
  /*color:#666666;*/

}

#about-me-info {
  margin-left: 30px;
}

/*a {
  position: relative;
  z-index: 100000;
}*/
/**********************************/


/* this is for detailed promopage*/

.description {
  font-size: 15px;
  color: gray;
}

.current-price {
  border: 3px solid red;
  width: 120px;
  font-weight: bolder;
}

.inner-price {
  margin: auto auto;
  width: 5.5em;
  padding: 1px 0;
}

.old-price {
  color:black;
}

.outer-old-price {
  text-decoration: line-through;
  color: red;
  font-weight:bolder;
}
/**********************************/

